--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 </head>
 <body>
     <div id="poster">
-        <p class="Heading">Swachh Bharat Sprint</p>
-    </div>      
+        <div class="Heading">
+          <p>Swachh Bharat Sprint</p>
+        </div>
+        <div id="mainposter">
+          <div class="up">
+            <h1><span class="auto-type"></span></h1>
+          </div>
+          <div class="down">
+          </div>
+        </div>
+        <div id="quote">
+          <div class="text">
+            <p>"Cleanliness is next to Godliness"</p>
+            <p id="name">- Mahatma Gandhi</p>
+          </div>
+          <div class="image">
+            <img src="./assets/gandhi.png" alt="Gandhi">
+          </div>
+        </div>
+    </div> 
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>     
   <script src="script.js"></script>
 </body>
