Added assets and started working on the animation

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
             <h1><span class="auto-type"></span></h1>
           </div>
           <div class="down">
+            <div class="Lft">
+              <div class="L">
+                <div class="hidebox"></div>
+                <img class="Garbage1" id="Garbage1" src="./assets/Garbage1.png" alt="Garbage1">
+                <img class="trashcan2" id="trashcan2" src="./assets/trashcan2.png" alt="trashcan2">
+                <img class="trashcan1" id="trashcan1" src="./assets/trashcan1.png" alt="trashcan1">
+              </div>
+              <div class="R">
+
+              </div>
+            </div>
           </div>
         </div>
         <div id="quote">
