Finishing touches and polishing

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
                 <div class="hidebox"></div>
                 <img class="trashcan2" id="trashcan2" src="./assets/trashcan2.png" alt="trashcan2">
                 <img class="trashcan1" id="trashcan1" src="./assets/trashcan1.png" alt="trashcan1">
+                <a class="play-now" href="https://arshvimal.itch.io/swachh-bharat-sprint" target="_blank">
+                  <div class="link-box">
+                    <p>Play Now</p>
+                  </div>
+                </a>
               </div>
               <div class="R">
-
+                <img class="People" src="./assets/People.png" alt="People">
               </div>
             </div>
           </div>
