--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div id="quote">
           <div class="text">
-            <p>"Cleanliness is next to Godliness"</p>
+            <p>"Cleanliness is the next to Godliness"</p>
             <p id="name">- Mahatma Gandhi</p>
           </div>
           <div class="image">
